[chore]: Update CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ project(authenticator VERSION 0.0.2)
 set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
 set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
 
-add_executable(authenticator ${SRC_DIR}/main.cpp)
+file(GLOB CPP_FILES "${SRC_DIR}/*.cpp")
+add_executable(authenticator ${CPP_FILES})
 
 add_subdirectory(${LIB_DIR}/nlohmann_json)
 target_link_libraries(authenticator PRIVATE nlohmann_json::nlohmann_json)
