[chore]: Fix long header name issues in #include
- Added .clangd, which looks up for header files in libraries
- Ignoring compile_commands.json, .cache (.clangd and cmake's cache)
- Removed long names from includes from header files inside of the src
  directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(authenticator VERSION 0.0.2)
 set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
 set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
 
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 file(GLOB CPP_FILES "${SRC_DIR}/*.cpp")
 add_executable(authenticator ${CPP_FILES})
 
