chore: Change target binary's name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 file(GLOB CPP_FILES "${SRC_DIR}/*.cpp")
-add_executable(authenticator ${CPP_FILES})
+add_executable(authenticate ${CPP_FILES})
 
 add_subdirectory(${LIB_DIR}/nlohmann_json)
-target_link_libraries(authenticator PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(authenticate PRIVATE nlohmann_json::nlohmann_json)
