chore: Add db_clients directory to CMake
Rename src/cli directory to src/db_clients

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
 set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
-file(GLOB CPP_FILES "${SRC_DIR}/*.cpp")
+file(GLOB CPP_FILES "${SRC_DIR}/*.cpp" "${SRC_DIR}/db_clients/*.cpp")
 add_executable(authenticate ${CPP_FILES})
 
 add_subdirectory(${LIB_DIR}/nlohmann_json)
