--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
+# Build files
 build
-lib
 
-# CMake generated compiler flags for clangd
-.cache
+# Binaries
+bin
+
+# Compiler flags for clangd
 compile_commands.json
+.cache
 
-.vscode/**
-CMakeFiles/**
+# External libraries
+external
+
+# Text editor specific files
+.vscode
+Session.vim
