feat: Add example config.json
A simple configuration file for authentication system.

--- a/examples/config.json
+++ b/examples/config.json
@@ -1,4 +1,12 @@
 {
-  "db_type": "PostgreSQL",
-  "configured": false
+  "database.type": "PostgreSQL",
+  "database.configured": true,
+  "database.config": {
+    "PostgreSQL": {
+      "tablename": "example_users",
+      "connection.string": {
+        "dbname": "example"
+      }
+    }
+  }
 }
