--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-target_sources(${EXECUTABLE_NAME} PRIVATE main.cpp utils.cpp)
+target_sources(${EXECUTABLE_NAME} PRIVATE main.cpp utils.cpp auth.cpp)
 add_subdirectory(connection)
