♻️ refactor: Make auth.hpp and auth/response.hpp private

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ target_link_libraries(${EXECUTABLE_NAME} PRIVATE pqxx)
 include_directories(${EXTERNAL_LIB_DIR}/nlohmann_json/include)
 
 # Include directories:
-include_directories(include)
+include_directories(${SRC_DIR})
